--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-redux": "^7.1.1",
     "react-scripts": "3.2.0",
     "react-spinners": "^0.6.1",
+    "react-transition-group": "^1.2.1",
     "styled-components": "^4.4.0"
   },
   "scripts": {
